2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Apply functions with more than one argument to the stack

2017-08-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Multiline expression entry

2017-08-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Percentage calculation dialog

2017-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Alternative simplified function edit dialog
	* Fix blurry text with GDK_SCALE > 1

2017-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Redesigned keypad

2017-08-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes for MS Windows (now compiles, and runs without apparent issues, with MinGW)

2017-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes to result image saving

2017-07-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix history operators with one selected item and selected text

2017-07-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix name input fields when cleared
	* Set max/min value in integer input field to INT_MAX/INT_MIN
	* Fix argument min/max input field
	* Parse instead of calculate values in matrix edit dialog
	* Update CSV import name logic
	* Add (long) max time for CSV export
	* Check for errors in more places (avoids message dialogs with no parent)
	* Use expression string, if available, instead of value in variable edit dialog

2017-07-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make it possible to stop conversion of result
	* Use escape key to abort
	* Abort on exit
	* Make history and rpn tab insensitive during calculation

2017-07-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix set unknowns
	* Enhanced conversion unit category list
	* Avoid recursion in expression() and answer()
	* Changes in conversion unit category list - only one row expand at the same time, show units in subcategories if list otherwise empty, expand on click if units in subcategories not shown
