@@ -1,0 +1,30 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<gresources>
+	<gresource prefix="/qalculate-gtk/ui">
+		<file preprocess="xml-stripblanks">argumentrules.ui</file>
+		<file preprocess="xml-stripblanks">csvexport.ui</file>
+		<file preprocess="xml-stripblanks">csvimport.ui</file>
+		<file preprocess="xml-stripblanks">datasetedit.ui</file>
+		<file preprocess="xml-stripblanks">datasets.ui</file>
+		<file preprocess="xml-stripblanks">decimals.ui</file>
+		<file preprocess="xml-stripblanks">functionedit.ui</file>
+		<file preprocess="xml-stripblanks">functions.ui</file>
+		<file preprocess="xml-stripblanks">main.ui</file>
+		<file preprocess="xml-stripblanks">matrixedit.ui</file>
+		<file preprocess="xml-stripblanks">matrix.ui</file>
+		<file preprocess="xml-stripblanks">namesedit.ui</file>
+		<file preprocess="xml-stripblanks">nbases.ui</file>
+		<file preprocess="xml-stripblanks">percentage.ui</file>
+		<file preprocess="xml-stripblanks">periodictable.ui</file>
+		<file preprocess="xml-stripblanks">plot.ui</file>
+		<file preprocess="xml-stripblanks">precision.ui</file>
+		<file preprocess="xml-stripblanks">preferences.ui</file>
+		<file preprocess="xml-stripblanks">setbase.ui</file>
+		<file preprocess="xml-stripblanks">simplefunctionedit.ui</file>
+		<file preprocess="xml-stripblanks">unitedit.ui</file>
+		<file preprocess="xml-stripblanks">units.ui</file>
+		<file preprocess="xml-stripblanks">unknownedit.ui</file>
+		<file preprocess="xml-stripblanks">variableedit.ui</file>
+		<file preprocess="xml-stripblanks">variables.ui</file>
+	</gresource>
+</gresources>
