@@ -1,3 +1,7 @@
+2017-08-18 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Use glib-compile-resources for ui files (makes it easier to relocate or run the application without installing)
+
 2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Apply functions with more than one argument to the stack
